k8/manifests/dep.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
  namespace: golang
  labels:
    app: go-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: aditya807/go:latest
          ports:
          - containerPort: 8080
