k8/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  namespace: golang
spec:
  selector:
    app: go-app
  type: NodePort
  ports:
    - protocol: TCP
      #system port 
      port: 80
    # removed target port and nodeport as goal is to implement using ingress svc here 
      targetPort: 8080
      nodePort: 30009
