k8/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: golang
spec:
  ingressClassName: nginx
  rules:
  #- host: garax.club
  # - host: aditya-goapp.local
  - host: go-web-app.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-app-service
            port:
              number: 80
#          - path: /courses
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: go-app-deployment
#                port:
#                  number: 80
